<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_bg"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="198dp"
                    android:src="@drawable/me_circle_" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ProfileDesc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="307dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/Found"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="381dp"
                    android:layout_height="127dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivWhatsapp"
                        android:clickable="true"
                        android:layout_width="190dp"
                        android:layout_height="114dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/iconwhatsapp" />

                    <ImageView
                        android:id="@+id/ivInstagram"
                        android:clickable="true"
                        android:layout_width="190dp"
                        android:layout_height="114dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/iconig" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivLocation"
                        android:clickable="true"
                        android:layout_width="190dp"
                        android:layout_height="114dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/iconmaps" />

                    <ImageView
                        android:id="@+id/ivAbout"
                        android:clickable="true"
                        android:layout_width="190dp"
                        android:layout_height="114dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/iconabout" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>